# MathCPP

./: .gitignore  CMakeLists.txt  Makefile  application.cpp  c_main.c  container.hpp  exceptions.hpp  list.hpp  main.cpp  matrix.hpp  tuple.hpp  vector.hpp  vector3d.hpp
Algorithms/: BinarySearch.hpp  BinarySearch.tpp  CMakeLists.txt  MLAlgs.hpp  MLAlgs.tpp  Makefile  Math.hpp  Math.tpp  binary_search.hpp  main.cpp  math.hpp  ml_algs.hpp
CLibrary/src/: clist.cpp
DataStructures/: CMakeLists.txt  ComputationGraph.hpp  ComputationGraph.tpp  Container.hpp  Container.tpp  List.hpp  List.tpp  Makefile  Matrix.hpp  Matrix.tpp  ScalerComputationGraph.hpp  ScalerComputationGraph.tpp  Tuple.hpp  Tuple.tpp  Vector.hpp  Vector.tpp  Vector3D.hpp  Vector3D.tpp  clib_macros.h  clist.h  computation_graph.hpp  computation_graph.tpp  container.hpp  container.tpp  list.h  list.hpp  list.tpp  main.cpp  matrix.hpp  matrix.tpp  tuple.hpp  tuple.tpp  vector.hpp  vector.tpp  vector3d.hpp
Exceptions/: CMakeLists.txt  Exceptions.hpp  exceptions.hpp
MachineLearning/: ActivationLayer.cpp  ActivationLayer.hpp  Algorithms.hpp  Algorithms.tpp  CMakeLists.txt  LinearLayer.cpp  LinearLayer.hpp  LossLayer.cpp  NLLLayer.cpp  NLLLayer.hpp  NeuralLayer.cpp  NeuralLayer.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  SoftMaxLayer.cpp  TanhLayer.hpp
Misc/: CMakeLists.txt  Random.cpp  Random.hpp
Test/: CMakeLists.txt  Makefile  test_main.cpp  tuple_test.hpp  vector3d_test.hpp  vector_test  vector_test.hpp
Test/DataStructures/: math_test.hpp  tuple_test.hpp  vector3d_test.hpp  vector_test.hpp
clib/: clist.cpp  clist.h
src/Algorithms/: BinarySearch.hpp  BinarySearch.tpp  CMakeLists.txt  Math.cpp  Math.hpp  Math.tpp
src/DataStructures/: CUDAArray.hpp  ComputationGraph.tpp  Container.hpp  Container.tpp  List.hpp  Matrix.hpp  Matrix.tpp  Quaternion.hpp  Quaternion.tpp  ScalerComputationGraph.tpp  Tuple.hpp  Tuple.tpp  Vector.hpp  Vector.tpp  Vector3D.hpp
src/MachineLearning/: ActivationLayer.hpp  Algorithms.hpp  CMakeLists.txt  LinearLayer.cpp  NeuralLayer.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  TanhLayer.cpp
src/MachineLearning/NeuralNetwork/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.hpp
src/MachineLearning/NeuralNetwork/Layers/: BatchNormLayer.cpp  BatchNormLayer.hpp  LinearLayer.cpp  LossLayer.hpp  ReLULayer.cpp  ReLULayer.hpp  SoftMaxLayer.cpp  SoftMaxLayer.hpp  TanhLayer.cpp
src/MathCUDA/: ArithmeticOperations.cu  ArithmeticOperations.cuh  CMakeLists.txt  CUDAHelpers.cu  CUDAHelpers.hpp  CUDAUtilities.cu  CUDAUtilities.cuh  GPUArray.cuh
src/Misc/: CMakeLists.txt  Random.cpp  Random.hpp
test/DataStructures/: matrix_test.hpp
